Added some sidebar styles, esp. username section

--- a/discord-theme.css
+++ b/discord-theme.css
@@ -146,3 +146,37 @@ body.light {
 	pointer-events: none;
 	opacity: 0;
 }
+#sidebar {
+	background-color: var(--sidebar);
+	display: grid;
+	grid-template-rows: auto 1fr auto;
+}
+.blogname {
+	background-color: var(--blogname);
+	display: grid;
+	grid-template-columns: 2em 1fr;
+	column-gap: 0.5em;
+	padding: 0.65em 0.5em;
+	max-width: 100%;
+	align-items: center;
+}
+.blogname div {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+.blogname div, .blogname div * {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+.blogname div h2 {
+	font-size: 0.875em;
+	color: var(--header);
+	font-weight: 600;
+}
+.blogname div p {
+	color: var(--usertag);
+	font-size: 0.75em;
+}
+img.round { border-radius: 100%; }
